[metadata]
name = aboo
version = 0.0.0
description = Banana API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aphkyle/aboo
author = aphkyle
author_email = aphkyle@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >3.6
package_dir =
    =src
install_requires =
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib

[options.packages.find]
where = src
